gen/firestore/v1/cargo-errors.log
    Checking google-firestore1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/firestore/v1/lib)
error[E0308]: mismatched types
    --> firestore/v1/lib/src/lib.rs:6357:49
     |
6357 |                         self.transaction = Some(value.into());
     |                                                 ^^^^^^^^^^^^
     |                                                 |
     |                                                 expected struct `std::vec::Vec`, found struct `std::boxed::Box`
     |                                                 help: try using a conversion method: `value.into().to_vec()`
     |
     = note: expected type `std::vec::Vec<u8>`
                found type `std::boxed::Box<[u8]>`

error[E0308]: mismatched types
    --> firestore/v1/lib/src/lib.rs:6571:49
     |
6571 |                         self.transaction = Some(value.into());
     |                                                 ^^^^^^^^^^^^
     |                                                 |
     |                                                 expected struct `std::vec::Vec`, found struct `std::boxed::Box`
     |                                                 help: try using a conversion method: `value.into().to_vec()`
     |
     = note: expected type `std::vec::Vec<u8>`
                found type `std::boxed::Box<[u8]>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
error: Could not compile `google-firestore1`.

To learn more, run the command again with --verbose.
